--- a/templates/dashboard/components/sidebar.html
+++ b/templates/dashboard/components/sidebar.html
@@ -82,6 +82,17 @@
           <span class="font-medium">Tickets</span>
         </a>
         <a
+          href="{% url 'dashboard:my_tickets' %}"
+          class="flex items-center gap-3 px-3 py-2 rounded-lg {% if request.resolver_match.view_name == 'dashboard:my_tickets' %} text-sky-600 bg-sky-100 {% else %} text-gray-700 hover:bg-gray-100 {% endif %}"
+        >
+          <img
+            src="{% if request.resolver_match.view_name == 'dashboard:my_tickets' %}{% static 'images/sidebar/configure_requests_highlighted.svg' %}{% else %}{% static 'images/sidebar/configure_request.svg' %}{% endif %}"
+            alt="My Tickets Icon"
+            class="w-5 h-5"
+          />
+          <span class="font-medium">My Tickets</span>
+        </a>
+        <a
           href="#"
           class="flex items-center gap-3 px-3 py-2 rounded-lg {% if request.resolver_match.view_name == 'dashboard:locations' %} text-sky-600 bg-sky-100 {% else %} text-gray-700 hover:bg-gray-100 {% endif %}">
           <img
